namespace-node-test-gitops.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: node-test-gitops
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
  labels:
    argocd.argoproj.io/managed-by: openshift-gitops
