deployment-node-full-stack.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  annotations:
    alpha.image.policy.openshift.io/resolve-names: '*'
    app.openshift.io/route-disabled: 'false'
    argocd.argoproj.io/sync-wave: "0"
    app.openshift.io/vcs-ref: ''
    app.openshift.io/vcs-uri: 'https://github.com/msatyan/NodeFullStack.git'
    deployment.kubernetes.io/revision: '3'
    image.openshift.io/triggers: >-
      [{"from":{"kind":"ImageStreamTag","name":"node-full-stack-git:latest","namespace":"node-test2"},"fieldPath":"spec.template.spec.containers[?(@.name==\"node-full-stack-git\")].image","pause":"false"}]
    openshift.io/generated-by: OpenShiftWebConsole
  name: node-full-stack-git
  labels:
    app: node-full-stack-git
    app.kubernetes.io/component: node-full-stack-git
    app.kubernetes.io/instance: node-full-stack-git
    app.kubernetes.io/name: node-full-stack-git
    app.kubernetes.io/part-of: node-full-stack-git-app
    app.openshift.io/runtime: nodejs
    app.openshift.io/runtime-version: 16-ubi8
spec:
  replicas: 0
  selector:
    matchLabels:
      app: node-full-stack-git
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: node-full-stack-git
        deployment: node-full-stack-git
    spec:
      containers:
        - name: node-full-stack-git
          image: >-
            image-registry.openshift-image-registry.svc:5000/node-test-gitops/node-full-stack-git:latest
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            limits:
              cpu: 500m
              memory: 256Mi
            requests:
              cpu: 500m
              memory: 256Mi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
